Fixed add a new post bug

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -25,7 +25,7 @@
 
             <h1>Add/Edit posts</h1>
 
-            <form id="contactForm" data-sb-form-api-token="API_TOKEN" , action="/edit/{{post.sno}}" , method="post">
+            <form id="contactForm" data-sb-form-api-token="API_TOKEN" , action="/edit/{{sno}}" , method="post">
                 <div class="form-floating">
                     <input class="form-control" name="title" id="title" type="text" placeholder="Enter your title..."
                         data-sb-validations="required", value="{{post.title}}" />
